Bug reproduction: 1. Open Basic IDE and type some text 2. Select text Result: Copy/Cut icons aren't activated, while corresponding Edit menu entries are. Another detail: Switch to another library leaving text selected and come back to the previous library. Now icons are activated.
althoug trivial, it would be nice to see it fixed.
confirmed ( also in Sun Oracle builds ) I'll take it Hmm will have a look as soon as I can ( however a patch is always welcome )
*** Bug 33552 has been marked as a duplicate of this bug. ***
Corresponding bugs in OOo IZ: http://www.openoffice.org/issues/show_bug.cgi?id=108119 - Undo and Redo buttons don't work in OOo Basic in OOO320m8 http://www.openoffice.org/issues/show_bug.cgi?id=108689 - Buttons "Cut", "Copy" not active when the text is selected in the Basic IDE http://www.openoffice.org/issues/show_bug.cgi?id=115671 - Save button in Basic IDE is not refreshed
In order to activate the buttons it is sufficient to once use the corresponding commands in the Edit menu or reopen the Standard panel.
i#108119 is fixed: http://hg.services.openoffice.org/cws/ab81/rev/d11c441ed074
Yet i#108119# is not fixed completely (Bug 108119 – Undo and Redo buttons don't work in OOo Basic in OOO320m8 http://openoffice.org/bugzilla/show_bug.cgi?id=108119). To summarise what bugs are found with the Panels and Menus in Basic IDE: * pressing Ctrl Z, the Redo button doesn't get enabled * Ctrl Y combination doesn't work at all * key combination Ctrl A works but the menu item "Select all" is always disabled * Paste button enabled/disabled properly on the panel, but not disabled in the menu if clipboard contains something other than string * Ctrl C will copy empty string to clipboard (even if the menu item is disabled) * Repeat menu (Ctrl Shift Y) is always disabled * Copy/Cut buttons on the panel are disabled * Save button on the panel seems to fixed (i#115671#) (Bug 115671 – Save button in Basic IDE is not refreshed http://openoffice.org/bugzilla/show_bug.cgi?id=115671 )
Must have been observed with 3.3.0beta or earlier. Only for completeness: still reproducible with "LibreOffice 3.3.2 – WIN7 Home Premium (64bit) German UI [OOO330m19 (Build:202 / tag 3.3.2.2)]"
Only for completeness: still a problem with "LibreOffice 3.4.2 - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:203)]" Modify Status due to facts
Just to give an update, on pc Debian x86-64, with master sources (future 3.7) updated today, I reproduced the pb.
Noel Power committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=56f30adffa34e2f645646048747e3110a275b072 make sure basic IDE cut/copy buttons on toolbar are refreshed fdo#30545 The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Noel Power committed a patch related to this issue. It has been pushed to "libreoffice-4-0": http://cgit.freedesktop.org/libreoffice/core/commit/?id=00e80df8fa4e6ae9f473376aa83e282e0fb5dbb0&h=libreoffice-4-0 make sure basic IDE cut/copy buttons on toolbar are refreshed fdo#30545 It will be available in LibreOffice 4.0.3. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.