make sure basic IDE cut/copy buttons on toolbar are refreshed fdo#30545

Change-Id: I483469f0b76ade7fb107c6f4ae5c28a4b03877b1